Fix spacing

--- a/cigionline/static/pages/home_page/css/_home_page.scss
+++ b/cigionline/static/pages/home_page/css/_home_page.scss
@@ -103,8 +103,11 @@
   }
 
   .homepage-promotion-blocks {
-    .col-md-6 {
+    .homepage-promotion-block {
       &:first-child {
+        @include media-breakpoint-up(md) {
+          margin-bottom: 0;
+        }
         margin-bottom: 1em;
       }
     }
